--- a/packages/nightingale-browser-console/.eslintrc.json
+++ b/packages/nightingale-browser-console/.eslintrc.json
@@ -4,5 +4,5 @@
   "env": {
     "browser": true
   },
-  "ignorePatterns": ["*.d.ts", "/dist", "/test", "/public", "/build"]
+  "ignorePatterns": ["*.d.ts", "/dist"]
 }
