--- a/packages/nightingale-raw-formatter/src/.eslintrc.json
+++ b/packages/nightingale-raw-formatter/src/.eslintrc.json
@@ -13,6 +13,7 @@
       "env": {
         "jest": true
       },
+      "extends": ["@pob/eslint-config-typescript/test"],
       "rules": {
         "import/no-extraneous-dependencies": [
           "error",
