--- a/packages/nightingale-ansi-formatter/.yo-rc.json
+++ b/packages/nightingale-ansi-formatter/.yo-rc.json
@@ -1,14 +1,14 @@
 {
   "pob": {
-    "pob-config": {
+    "project": {
+      "type": "lib"
+    },
+    "lib": {
       "testing": {
         "codecov": true,
         "ci": true
       },
       "documentation": false
-    },
-    "project": {
-      "type": "lib"
     }
   }
 }
