--- a/packages/nightingale-level-names/.yo-rc.json
+++ b/packages/nightingale-level-names/.yo-rc.json
@@ -3,7 +3,7 @@
     "project": {
       "type": "lib"
     },
-    "pob-config": {
+    "lib": {
       "documentation": false,
       "testing": false
     }
