fix: import browser path

--- a/packages/nightingale-browser-console/package.json
+++ b/packages/nightingale-browser-console/package.json
@@ -29,14 +29,14 @@
       "browser": {
         "browser:modern": {
           "development": {
-            "import": "./dist/index-browsermodern-dev.mjs"
+            "import": "./dist/index-browsermodern-dev.es.js"
           },
-          "import": "./dist/index-browsermodern.mjs"
+          "import": "./dist/index-browsermodern.es.js"
         },
         "development": {
-          "import": "./dist/index-browser-dev.mjs"
+          "import": "./dist/index-browser-dev.es.js"
         },
-        "import": "./dist/index-browser.mjs"
+        "import": "./dist/index-browser.es.js"
       }
     }
   },
