--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -56,7 +56,7 @@
   "module:browser-dev": "./dist/index-browser-dev.es.js",
   "module:modern-browsers": "./dist/index-browsermodern.es.js",
   "module:modern-browsers-dev": "./dist/index-browsermodern-dev.es.js",
-  "sideEffects": true,
+  "sideEffects": false,
   "scripts": {
     "build": "pob-build && yarn run build:definitions",
     "build:definitions": "tsc -p tsconfig.build.json",
@@ -111,8 +111,8 @@
     "@pob/eslint-config-node": "43.0.0",
     "@pob/eslint-config-typescript": "43.0.0",
     "@types/source-map-support": "0.4.2",
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
     "babel-preset-latest-node": "5.4.0",
     "babel-preset-modern-browsers": "15.0.2",
     "eslint": "7.18.0",
@@ -120,7 +120,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-unicorn": "25.0.1",
-    "pob-babel": "26.3.0",
+    "pob-babel": "26.4.0",
     "rollup": "2.36.2",
     "typescript": "4.1.3"
   }
