--- a/packages/nightingale-app-console/.eslintrc.json
+++ b/packages/nightingale-app-console/.eslintrc.json
@@ -1,5 +1,5 @@
 {
   "root": true,
   "extends": ["@pob/eslint-config/root", "@pob/eslint-config-node"],
-  "ignorePatterns": ["/dist"]
+  "ignorePatterns": ["*.d.ts", "/dist"]
 }
