--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -100,6 +100,7 @@
     ]
   },
   "dependencies": {
+    "@types/node": "*",
     "nightingale": "^11.0.5",
     "nightingale-browser-console": "^11.0.5",
     "nightingale-console": "^11.0.5"
