--- a/packages/nightingale-browser-console/package.json
+++ b/packages/nightingale-browser-console/package.json
@@ -24,6 +24,7 @@
   "main": "./dist/index-browser.es.js",
   "types": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
+  "browser": "./dist/index-browser.es.js",
   "exports": {
     ".": {
       "browser": {
