--- a/packages/nightingale-html-formatter/package.json
+++ b/packages/nightingale-html-formatter/package.json
@@ -27,6 +27,7 @@
   "main": "./index.js",
   "types": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
+  "browser": "./dist/index-browser.es.js",
   "exports": {
     ".": {
       "node": {
