--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -26,6 +26,7 @@
   "main": "./index.js",
   "types": "./dist/index.d.ts",
   "module": "./dist/index-browser.es.js",
+  "browser": "./dist/index-browser.es.js",
   "exports": {
     ".": {
       "node": {
