--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -17,8 +17,17 @@
   "engines": {
     "node": ">=12.10.0"
   },
+  "browserslist": [
+    "> 0.2%",
+    "Firefox ESR",
+    "not ie < 12",
+    "not dead",
+    "not op_mini all"
+  ],
   "main": "./index.js",
   "types": "./dist/index.d.ts",
+  "module": "./dist/index-browser.es.js",
+  "browser": "./dist/index-browser.es.js",
   "exports": {
     ".": {
       "node": {
@@ -28,11 +37,21 @@
         },
         "import": "./dist/index-node12.mjs",
         "require": "./dist/index-node12.cjs.js"
+      },
+      "browser": {
+        "development": {
+          "import": "./dist/index-browser-dev.es.js",
+          "require": "./dist/index-browser-dev.cjs.js"
+        },
+        "import": "./dist/index-browser.es.js",
+        "require": "./dist/index-browser.cjs.js"
       }
     }
   },
   "module:node": "./dist/index-node12.mjs",
   "module:node-dev": "./dist/index-node12-dev.mjs",
+  "module:browser": "./dist/index-browser.es.js",
+  "module:browser-dev": "./dist/index-browser-dev.es.js",
   "sideEffects": false,
   "scripts": {
     "build": "pob-build && yarn run build:definitions",
@@ -78,6 +97,13 @@
           "cjs",
           "es"
         ]
+      },
+      {
+        "target": "browser",
+        "formats": [
+          "cjs",
+          "es"
+        ]
       }
     ],
     "entries": [
@@ -92,10 +118,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
     "@pob/eslint-config": "43.0.0",
     "@pob/eslint-config-node": "43.1.0",
     "@pob/eslint-config-typescript": "43.0.0",
-    "@pob/eslint-config-typescript-node": "43.0.0",
     "@types/jest": "26.0.20",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
