docs: improve root page and logger class links
fixes #154

--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -43,7 +43,7 @@
       "packages/nightingale-app-react-native/src/"
     ],
     "exclude": ["src/**/*.test.ts", "src/**/__tests__/**"],
-    "readme": "README.md",
+    "readme": "packages/nightingale/README.md",
     "out": "docs",
     "excludePrivate": true,
     "gitRevision": "master"
