docs: improve links with references supported by typedoc 0.20

--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -15,33 +15,61 @@
     "esModuleInterop": true
   },
 
+  "references": [
+    { "path": "packages/nightingale-levels/tsconfig.build.json" },
+    { "path": "packages/nightingale-debug/tsconfig.build.json" },
+    { "path": "packages/nightingale-types/tsconfig.build.json" },
+    { "path": "packages/nightingale-console-output/tsconfig.build.json" },
+    { "path": "packages/nightingale-formatter/tsconfig.build.json" },
+    { "path": "packages/nightingale-logger/tsconfig.build.json" },
+    { "path": "packages/nightingale-sentry/tsconfig.build.json" },
+    { "path": "packages/nightingale-web-processor/tsconfig.build.json" },
+    { "path": "packages/nightingale-winston-adapter/tsconfig.build.json" },
+    { "path": "packages/nightingale-ansi-formatter/tsconfig.build.json" },
+    {
+      "path": "packages/nightingale-browser-console-formatter/tsconfig.build.json"
+    },
+    { "path": "packages/nightingale-html-formatter/tsconfig.build.json" },
+    { "path": "packages/nightingale-json-formatter/tsconfig.build.json" },
+    { "path": "packages/nightingale-markdown-formatter/tsconfig.build.json" },
+    { "path": "packages/nightingale-raw-formatter/tsconfig.build.json" },
+    { "path": "packages/nightingale-browser-console/tsconfig.build.json" },
+    { "path": "packages/nightingale-console/tsconfig.build.json" },
+    { "path": "packages/nightingale-react-native-console/tsconfig.build.json" },
+    { "path": "packages/nightingale-slack/tsconfig.build.json" },
+    { "path": "packages/nightingale-string/tsconfig.build.json" },
+    { "path": "packages/nightingale/tsconfig.build.json" },
+    { "path": "packages/nightingale-app-console/tsconfig.build.json" },
+    { "path": "packages/nightingale-app-react-native/tsconfig.build.json" }
+  ],
+
   "typedocOptions": {
     "entryPoints": [
-      "packages/nightingale-levels/src/index.ts",
-      "packages/nightingale-debug/src/index.ts",
-      "packages/nightingale-types/src/index.ts",
-      "packages/nightingale-console-output/src/index.ts",
-      "packages/nightingale-formatter/src/index.ts",
-      "packages/nightingale-logger/src/index.ts",
-      "packages/nightingale-sentry/src/index.ts",
-      "packages/nightingale-web-processor/src/index.ts",
-      "packages/nightingale-winston-adapter/src/index.ts",
-      "packages/nightingale-ansi-formatter/src/index.ts",
-      "packages/nightingale-browser-console-formatter/src/index.ts",
-      "packages/nightingale-html-formatter/src/index.ts",
-      "packages/nightingale-json-formatter/src/index.ts",
-      "packages/nightingale-markdown-formatter/src/index.ts",
-      "packages/nightingale-raw-formatter/src/index.ts",
-      "packages/nightingale-browser-console/src/index.ts",
-      "packages/nightingale-console/src/index.ts",
-      "packages/nightingale-react-native-console/src/index.ts",
-      "packages/nightingale-slack/src/index.ts",
-      "packages/nightingale-string/src/index.ts",
-      "packages/nightingale/src/index.ts",
+      "packages/nightingale-app-react-native/src/index.ts",
       "packages/nightingale-app-console/src/index.ts",
-      "packages/nightingale-app-react-native/src/index.ts"
+      "packages/nightingale/src/index.ts",
+      "packages/nightingale-string/src/index.ts",
+      "packages/nightingale-slack/src/index.ts",
+      "packages/nightingale-react-native-console/src/index.ts",
+      "packages/nightingale-console/src/index.ts",
+      "packages/nightingale-browser-console/src/index.ts",
+      "packages/nightingale-raw-formatter/src/index.ts",
+      "packages/nightingale-markdown-formatter/src/index.ts",
+      "packages/nightingale-json-formatter/src/index.ts",
+      "packages/nightingale-html-formatter/src/index.ts",
+      "packages/nightingale-browser-console-formatter/src/index.ts",
+      "packages/nightingale-ansi-formatter/src/index.ts",
+      "packages/nightingale-winston-adapter/src/index.ts",
+      "packages/nightingale-web-processor/src/index.ts",
+      "packages/nightingale-sentry/src/index.ts",
+      "packages/nightingale-logger/src/index.ts",
+      "packages/nightingale-formatter/src/index.ts",
+      "packages/nightingale-console-output/src/index.ts",
+      "packages/nightingale-types/src/index.ts",
+      "packages/nightingale-debug/src/index.ts",
+      "packages/nightingale-levels/src/index.ts"
     ],
-    "exclude": ["src/**/*.test.ts", "src/**/__tests__/**"],
+    "exclude": ["**/*.test.ts", "**/__tests__/**"],
     "readme": "packages/nightingale/README.md",
     "out": "docs",
     "excludePrivate": true,
