chore: fix lint script

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "generate:docs": "rm -Rf docs ; yarn run generate:api ; touch docs/.nojekyll",
     "generate:test-coverage": "lerna run --parallel --ignore \"*-example\" generate:test-coverage",
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
-    "lint:eslint": "lerna run --stream lint",
+    "lint:eslint": "eslint --report-unused-disable-directives --quiet --resolve-plugins-relative-to . --ext js,mjs,ts,tsx .",
     "lint:prettier": "prettier --check .",
-    "preversion": "yarn run lint:prettier && yarn run lint:eslint --since && yarn run build && repository-check-dirty",
+    "preversion": "yarn run lint && yarn run build && repository-check-dirty",
     "release": "GH_TOKEN=$POB_GITHUB_TOKEN lerna version --conventional-commits --conventional-graduate --create-release=github -m 'chore: release' && lerna publish from-git",
     "test": "lerna run --stream test",
     "tsc": "tsc -b",
