--- a/packages/nightingale-sentry/package.json
+++ b/packages/nightingale-sentry/package.json
@@ -104,9 +104,9 @@
     ]
   },
   "dependencies": {
-    "@sentry/core": "^6.1.0",
-    "@sentry/node": "^6.1.0",
-    "@sentry/types": "^6.1.0",
+    "@sentry/core": "^5.0.0 || ^6.1.0",
+    "@sentry/node": "^5.0.0 || ^6.1.0",
+    "@sentry/types": "^5.0.0 || ^6.1.0",
     "nightingale-levels": "^11.5.2",
     "nightingale-types": "^11.5.2"
   },
