--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "lerna run --stream build && yarn run build:definitions && yarn run generate:docs",
     "build:definitions": "tsc -b tsconfig.build.json",
+    "checks": "node scripts/check-packages.js",
     "generate:api": "typedoc --tsconfig tsconfig.doc.json",
     "generate:docs": "rm -Rf docs ; yarn run generate:api ; touch docs/.nojekyll",
     "generate:test-coverage": "lerna run --parallel --ignore \"*-example\" generate:test-coverage",
@@ -47,8 +48,9 @@
     "@pob/lerna-light": "3.24.0",
     "@pob/root": "3.1.1",
     "@types/node": "14.14.34",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
+    "@typescript-eslint/eslint-plugin": "4.17.0",
+    "@typescript-eslint/parser": "4.17.0",
+    "check-package-dependencies": "0.1.2",
     "eslint": "7.22.0",
     "eslint-import-resolver-node": "0.3.4",
     "eslint-plugin-import": "2.22.1",
@@ -56,10 +58,13 @@
     "eslint-plugin-unicorn": "25.0.1",
     "husky": "4.3.8",
     "prettier": "2.2.1",
-    "typedoc": "0.20.24",
-    "typescript": "4.1.5"
+    "typedoc": "0.20.30",
+    "typescript": "4.2.3"
   },
   "resolutions": {
     "@types/node": "14.14.34"
+  },
+  "resolutionsExplained": {
+    "@types/node": "Avoid problems in typescript with several versions of @types/node"
   }
 }
