--- a/packages/nightingale-markdown-formatter/package.json
+++ b/packages/nightingale-markdown-formatter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nightingale-markdown-formatter",
-  "version": "11.5.2",
+  "version": "11.6.0",
   "description": "Nightingale Markdown formatter",
   "keywords": [
     "nightingale",
@@ -131,8 +131,8 @@
     ]
   },
   "dependencies": {
-    "nightingale-formatter": "^11.5.2",
-    "nightingale-types": "^11.5.2"
+    "nightingale-formatter": "^11.6.0",
+    "nightingale-types": "^11.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
@@ -152,7 +152,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-unicorn": "25.0.1",
     "jest": "26.6.3",
-    "nightingale-levels": "11.5.2",
+    "nightingale-levels": "^11.6.0",
     "pob-babel": "26.8.0",
     "pob-lcov-reporter": "4.0.1",
     "rollup": "2.42.1",
