--- a/packages/nightingale-app-react-native/package.json
+++ b/packages/nightingale-app-react-native/package.json
@@ -89,9 +89,13 @@
       "index"
     ]
   },
+  "peerDependencies": {
+    "react-native": "*"
+  },
   "dependencies": {
     "@types/node": ">=12.0.0",
     "nightingale": "^11.6.0",
+    "nightingale-browser-console": "^11.6.0",
     "nightingale-react-native-console": "^11.6.0"
   },
   "devDependencies": {
