--- a/packages/nightingale-app-react-native/package.json
+++ b/packages/nightingale-app-react-native/package.json
@@ -90,7 +90,13 @@
     ]
   },
   "peerDependencies": {
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-web": "*"
+  },
+  "peerDependenciesMeta": {
+    "react-native-web": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@types/node": ">=12.0.0",
