--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
           github.ref == 'refs/heads/main'
           && contains(github.event.inputs.dry-run, 'y') == false
         run: |
-          yarn lerna version --yes --push --conventional-commits --conventional-graduate --create-release=github -m 'chore: release [skip ci]'
+          yarn lerna version --yes --push --conventional-commits --conventional-graduate --create-release=github
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
