refactor: regenerate docs

--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -11,6 +11,7 @@
     "target": "esnext",
     "module": "esnext",
     "lib": ["dom", "esnext"],
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "esModuleInterop": true
   },
