--- a/packages/nightingale-console/src/.eslintrc.json
+++ b/packages/nightingale-console/src/.eslintrc.json
@@ -9,5 +9,22 @@
     "@pob/eslint-config-typescript",
     "@pob/eslint-config-typescript/node"
   ],
-  "ignorePatterns": ["*.d.ts"]
+  "ignorePatterns": ["*.d.ts"],
+  "overrides": [
+    {
+      "files": ["**/*.test.ts", "__tests__/**/*.ts"],
+      "extends": ["@pob/eslint-config-typescript/test"],
+      "env": {
+        "jest": true
+      },
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
+    }
+  ]
 }
