--- a/packages/nightingale-browser-console/src/.eslintrc.json
+++ b/packages/nightingale-browser-console/src/.eslintrc.json
@@ -6,5 +6,22 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": ["@pob/eslint-config-typescript"],
-  "ignorePatterns": ["*.d.ts"]
+  "ignorePatterns": ["*.d.ts"],
+  "overrides": [
+    {
+      "files": ["**/*.test.ts", "__tests__/**/*.ts"],
+      "extends": ["@pob/eslint-config-typescript/test"],
+      "env": {
+        "jest": true
+      },
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
+    }
+  ]
 }
