--- a/packages/nightingale-example/src/.eslintrc.json
+++ b/packages/nightingale-example/src/.eslintrc.json
@@ -16,5 +16,22 @@
       }
     }
   },
-  "ignorePatterns": ["*.d.ts"]
+  "ignorePatterns": ["*.d.ts"],
+  "overrides": [
+    {
+      "files": ["**/*.test.ts", "__tests__/**/*.ts"],
+      "extends": ["@pob/eslint-config-typescript/test"],
+      "env": {
+        "jest": true
+      },
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
+    }
+  ]
 }
