chore: remove old dist in examples

--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -43,6 +43,7 @@
   },
   "scripts": {
     "build": "pob-build",
+    "clean": "rm -Rf dist",
     "lint": "yarn run lint:eslint",
     "lint:eslint": "cd ../.. && yarn run eslint --report-unused-disable-directives --resolve-plugins-relative-to . --quiet packages/nightingale-console-example",
     "start": "pob-watch",
