chore: update config

--- a/package.json
+++ b/package.json
@@ -52,7 +52,11 @@
       "pob-babel/setup-jest.cjs"
     ],
     "testEnvironment": "node",
-    "cacheDirectory": "./node_modules/.cache/jest"
+    "cacheDirectory": "./node_modules/.cache/jest",
+    "testMatch": [
+      "<rootDir>/packages/*/(src|lib)/**/__tests__/**/*.(ts|js|cjs|mjs)",
+      "<rootDir>/packages/*/(src|lib)/**/*.test.(ts|js|cjs|mjs)"
+    ]
   },
   "resolutions": {
     "@types/node": "14.18.0"
