--- a/packages/nightingale-example/tsconfig.json
+++ b/packages/nightingale-example/tsconfig.json
@@ -30,7 +30,8 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "baseUrl": "" /* Base directory to resolve non-absolute module names. */,
+    "resolveJsonModule": true,
+    "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
 
     "paths": {
       "nightingale-types": ["../../../packages/nightingale-types/src"],
