--- a/packages/nightingale-browser-console/package.json
+++ b/packages/nightingale-browser-console/package.json
@@ -14,7 +14,7 @@
     "directory": "packages/nightingale-browser-console"
   },
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "type": "commonjs",
+  "type": "module",
   "browserslist": [
     "defaults",
     "> 0.2%",
