--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -10,7 +10,7 @@
     "directory": "packages/nightingale-console-example"
   },
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
