--- a/packages/nightingale-react-native-console/package.json
+++ b/packages/nightingale-react-native-console/package.json
@@ -16,7 +16,7 @@
     "directory": "packages/nightingale-react-native-console"
   },
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "type": "commonjs",
+  "type": "module",
   "browserslist": [
     "defaults",
     "> 0.2%",
