--- a/packages/nightingale-formatter/package.json
+++ b/packages/nightingale-formatter/package.json
@@ -14,7 +14,7 @@
     "directory": "packages/nightingale-formatter"
   },
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
