--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -13,7 +13,7 @@
     "directory": "packages/nightingale-logger"
   },
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
