--- a/packages/nightingale-console-output/package.json
+++ b/packages/nightingale-console-output/package.json
@@ -49,12 +49,13 @@
   "module:modern-browsers": "./dist/index-browsermodern.es.js",
   "sideEffects": false,
   "scripts": {
-    "build": "pob-build && yarn run build:definitions",
+    "build": "yarn clean:build && rollup --config rollup.config.mjs && yarn run build:definitions",
     "build:definitions": "tsc -p tsconfig.build.json",
-    "clean": "rm -Rf dist",
+    "clean": "yarn clean:build",
+    "clean:build": "rm -Rf dist",
     "lint": "yarn run lint:eslint",
     "lint:eslint": "cd ../.. && yarn run eslint --report-unused-disable-directives --resolve-plugins-relative-to . --quiet packages/nightingale-console-output",
-    "watch": "pob-watch"
+    "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "prettier": {
     "trailingComma": "all",
@@ -99,7 +100,7 @@
     "@babel/core": "7.17.0",
     "@babel/preset-env": "7.16.11",
     "babel-preset-modern-browsers": "15.0.2",
-    "pob-babel": "30.0.1",
+    "pob-babel": "31.0.0",
     "typescript": "4.5.5"
   }
 }
