--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
   "root": true,
   "extends": ["@pob/eslint-config/root-module"],
-  "ignorePatterns": ["/docs"]
+  "ignorePatterns": ["/docs", "/rollup.config.mjs"]
 }
