--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -42,11 +42,12 @@
     "./sentry.js": "./dist/sentry-node14.es.js"
   },
   "scripts": {
-    "build": "pob-build",
-    "clean": "rm -Rf dist",
+    "build": "yarn clean:build && rollup --config rollup.config.mjs",
+    "clean": "yarn clean:build",
+    "clean:build": "rm -Rf dist",
     "lint": "yarn run lint:eslint",
     "lint:eslint": "cd ../.. && yarn run eslint --report-unused-disable-directives --resolve-plugins-relative-to . --quiet packages/nightingale-console-example",
-    "start": "pob-watch",
+    "start": "yarn clean:build && rollup --config rollup.config.mjs --watch",
     "watch": "pob-watch"
   },
   "prettier": {
@@ -79,7 +80,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.0",
-    "pob-babel": "30.0.1",
+    "pob-babel": "31.0.0",
     "typescript": "4.5.5"
   }
 }
