--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -32,12 +32,13 @@
   "module:node": "./dist/index-node14.mjs",
   "sideEffects": false,
   "scripts": {
-    "build": "pob-build && yarn run build:definitions",
+    "build": "yarn clean:build && rollup --config rollup.config.mjs && yarn run build:definitions",
     "build:definitions": "tsc -p tsconfig.build.json",
-    "clean": "rm -Rf dist",
+    "clean": "yarn clean:build",
+    "clean:build": "rm -Rf dist",
     "lint": "yarn run lint:eslint",
     "lint:eslint": "cd ../.. && yarn run eslint --report-unused-disable-directives --resolve-plugins-relative-to . --quiet packages/nightingale-string",
-    "watch": "pob-watch"
+    "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch"
   },
   "prettier": {
     "trailingComma": "all",
@@ -65,7 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.0",
-    "pob-babel": "30.0.1",
+    "pob-babel": "31.0.0",
     "typescript": "4.5.5"
   }
 }
