chore: update @pob/root

--- a/packages/nightingale-browser-console/tsconfig.json
+++ b/packages/nightingale-browser-console/tsconfig.json
@@ -2,8 +2,8 @@
   "include": ["src/**/*.ts"],
   "compilerOptions": {
     "rootDir": "src",
-    "composite": true,
     "incremental": true,
+    "composite": true,
     "noEmit": false,
     "noEmitOnError": true,
     "declaration": true,
@@ -21,7 +21,7 @@
       "dom",
       "esnext"
     ] /* Polyfills are imported either by babel or with polyfill.io */,
-    // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+    // "jsx": "react-jsx",                     /* 'react-jsx' is used with react/jsx-runtime (react >=17 || >= 16.14.0 | >= 15.7.0) */
     "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */,
 
     /* Enable all strict type-checking options. */
@@ -59,9 +59,11 @@
     }
   },
   "references": [
-    { "path": "../nightingale-debug/tsconfig.json" },
-    { "path": "../nightingale-types/tsconfig.json" },
-    { "path": "../nightingale-console-output/tsconfig.json" },
-    { "path": "../nightingale-browser-console-formatter/tsconfig.json" }
+    { "path": "../../packages/nightingale-debug/tsconfig.json" },
+    { "path": "../../packages/nightingale-types/tsconfig.json" },
+    { "path": "../../packages/nightingale-console-output/tsconfig.json" },
+    {
+      "path": "../../packages/nightingale-browser-console-formatter/tsconfig.json"
+    }
   ]
 }
