--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "pob-root-postinstall",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "tsc": "tsc -b",
-    "watch": "yarn workspaces foreach --parallel --jobs unlimited --interlaced --exclude \"*-example\" -Av run watch",
+    "watch": "yarn clean:build && rollup --config rollup.config.mjs --watch",
     "watch:lerna": "lerna run --parallel --ignore \"*-example\" watch"
   },
   "prettier": {
@@ -70,13 +70,13 @@
     "@pob/eslint-config": "48.1.1",
     "@pob/eslint-config-typescript": "48.1.1",
     "@pob/lerna-light": "5.1.0",
-    "@pob/root": "6.7.0",
+    "@pob/root": "6.7.1",
     "@types/jest": "27.4.0",
     "@types/node": "14.18.11",
     "check-package-dependencies": "3.2.0",
     "eslint": "8.9.0",
     "jest": "27.5.1",
-    "pob-babel": "31.0.0",
+    "pob-babel": "32.0.0",
     "prettier": "2.5.1",
     "typedoc": "0.22.11",
     "typescript": "4.5.5"
