--- a/packages/nightingale-app-console/tsconfig.build.json
+++ b/packages/nightingale-app-console/tsconfig.build.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
 
   "compilerOptions": {
-    "rootDir": "src",
     "noEmit": false,
     "declaration": true,
     "declarationMap": true,
@@ -14,8 +13,8 @@
 
   "exclude": ["dist/**", "src/**/*.test.ts", "src/**/__tests__/**"],
   "references": [
-    { "path": "../nightingale-browser-console/tsconfig.build.json" },
-    { "path": "../nightingale-console/tsconfig.build.json" },
-    { "path": "../nightingale/tsconfig.build.json" }
+    { "path": "../../packages/nightingale-browser-console/tsconfig.json" },
+    { "path": "../../packages/nightingale-console/tsconfig.json" },
+    { "path": "../../packages/nightingale/tsconfig.json" }
   ]
 }
