--- a/packages/nightingale-browser-console/tsconfig.build.json
+++ b/packages/nightingale-browser-console/tsconfig.build.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
 
   "compilerOptions": {
-    "rootDir": "src",
     "noEmit": false,
     "declaration": true,
     "declarationMap": true,
@@ -14,9 +13,11 @@
 
   "exclude": ["dist/**", "src/**/*.test.ts", "src/**/__tests__/**"],
   "references": [
-    { "path": "../nightingale-debug/tsconfig.build.json" },
-    { "path": "../nightingale-types/tsconfig.build.json" },
-    { "path": "../nightingale-console-output/tsconfig.build.json" },
-    { "path": "../nightingale-browser-console-formatter/tsconfig.build.json" }
+    { "path": "../../packages/nightingale-debug/tsconfig.json" },
+    { "path": "../../packages/nightingale-types/tsconfig.json" },
+    { "path": "../../packages/nightingale-console-output/tsconfig.json" },
+    {
+      "path": "../../packages/nightingale-browser-console-formatter/tsconfig.json"
+    }
   ]
 }
