--- a/packages/nightingale-html-formatter/tsconfig.build.json
+++ b/packages/nightingale-html-formatter/tsconfig.build.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
 
   "compilerOptions": {
-    "rootDir": "src",
     "noEmit": false,
     "declaration": true,
     "declarationMap": true,
@@ -14,8 +13,8 @@
 
   "exclude": ["dist/**", "src/**/*.test.ts", "src/**/__tests__/**"],
   "references": [
-    { "path": "../nightingale-levels/tsconfig.build.json" },
-    { "path": "../nightingale-types/tsconfig.build.json" },
-    { "path": "../nightingale-formatter/tsconfig.build.json" }
+    { "path": "../../packages/nightingale-levels/tsconfig.json" },
+    { "path": "../../packages/nightingale-types/tsconfig.json" },
+    { "path": "../../packages/nightingale-formatter/tsconfig.json" }
   ]
 }
