--- a/packages/nightingale-web-processor/tsconfig.build.json
+++ b/packages/nightingale-web-processor/tsconfig.build.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
 
   "compilerOptions": {
-    "rootDir": "src",
     "noEmit": false,
     "declaration": true,
     "declarationMap": true,
@@ -13,5 +12,5 @@
   },
 
   "exclude": ["dist/**", "src/**/*.test.ts", "src/**/__tests__/**"],
-  "references": [{ "path": "../nightingale-types/tsconfig.build.json" }]
+  "references": [{ "path": "../../packages/nightingale-types/tsconfig.json" }]
 }
