--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -43,7 +43,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "yarn clean:build && rollup --config rollup.config.mjs && yarn run build:definitions",
-    "build:definitions": "tsc -p",
+    "build:definitions": "tsc -p tsconfig.json",
     "clean": "yarn clean:build",
     "clean:build": "pob-babel-clean-out dist",
     "lint": "yarn run lint:eslint",
